--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- ヘッダー部分 -->
   <header>
     <h1>私のポートフォリオ</h1>
-    <p>制作したコード作品を紹介します</p>
+    <p>制作したコード作品を紹介しますaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
   </header>
 
   <!-- メインコンテンツ -->
