--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     <!-- プロジェクト①の紹介 -->
     <section class="project">
       <h2>電卓</h2>
-      <p>この作品はマウスホイールを押すだけで電卓が開くというコードです。主な技術：Python</p>
-      <p><a href="https://example.com/project1" target="_blank">▶ デモを見る</a></p>
+      <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
       <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md" target="_blank">▶ GitHubコードを見る</a></p>
     </section>
 
