--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 
   <!-- メインコンテンツ -->
   <div class="container">
-    <!-- プロジェクト①の紹介 -->
+    <!-- 作品1の紹介 -->
     <section class="project">
       <h2>電卓</h2>
       <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
       <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md" target="_blank">▶ GitHubコードを見る</a></p>
     </section>
 
-    <!-- プロジェクト②の紹介 -->
+    <!-- 作品2の紹介 -->
     <section class="project">
-      <h2>作品タイトル②</h2>
+      <h2>たいとるうううううううう</h2>
       <p>この作品は△△を解決するためのツールです。主な技術：React, Node.js</p>
       <p><a href="https://example.com/project2" target="_blank">▶ デモを見る</a></p>
       <p><a href="https://github.com/yourusername/project2" target="_blank">▶ GitHubコードを見る</a></p>
