--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <!-- 作品2の紹介 -->
     <section class="project">
       <h2>たいとるうううううううう</h2>
-      <p>この作品は△△を解決するためのツールです。主な技術：React, Node.js</p>
-      <p><a href="https://example.com/project2" target="_blank">▶ デモを見る</a></p>
+      <p>この作品はーーーーーー。主な技術：みていーーーー</p>
+      <p><a href="https://example.com/project2" target="_blank">▶ 表を見る</a></p>
       <p><a href="https://github.com/yourusername/project2" target="_blank">▶ GitHubコードを見る</a></p>
     </section>
   </div>
 
   <!-- フッター部分 -->
   <footer>
-    &copy; 2025 小林大和. All rights reserved.
+    2025 小林大和
   </footer>
 </body>
 </html>
