--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="project">
       <h2>電卓</h2>
       <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
-      <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md" target="_blank">▶ GitHubコードを見る</a></p>
+      <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
     </section>
 
     <!-- 作品2の紹介 -->
