--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <!-- 自己紹介セクション -->
     <section class="project">
       <h2>自己紹介</h2>
-      <p>初めまして、小林大和と申します。</p>
-      <p>この記事では職業訓練で学んだ知識をポートフォリオとして残すために作成しました。</p>
+      <p>初めまして、小林大和と申します。現在、職業訓練校を受講しています。</p>
+      <p>訓練校ではHTML CSS Java Pythonを中心に学んでいます。</p>
+      <p>この記事では訓練校で学んだ知識をポートフォリオとして残すために作成しました。</p>
       <p>趣味はゲーム、散歩、自分や誰かの生活を少しでも豊かにできるような物作るのが目標です。</p>
     </section>
 
