--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <p>初めまして、小林大和と申します。現在、職業訓練校を受講しています。</p>
       <p>訓練校ではHTML CSS Java Pythonを中心に学んでいます。</p>
       <p>この記事では訓練校で学んだ知識をポートフォリオとして残すために作成しました。</p>
-      <p>趣味はゲーム、散歩、自分や誰かの生活を少しでも豊かにできるような物作るのが目標です。</p>
+      <p>趣味はゲーム、アニメ、自分や誰かの生活を少しでも豊かにできるような物作るのが目標です。</p>
     </section>
 
     <!-- 区切り線 -->
