--- a/index.html
+++ b/index.html
@@ -67,11 +67,23 @@
     <div class="section-divider"></div>
 
     <!-- 作品1の紹介 -->
-    <section class="project">
-      <h2>電卓</h2>
-      <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
-      <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
-    </section>
+<!-- 作品1の紹介 -->
+<section class="project" style="display: flex; align-items: flex-start; gap: 1rem;">
+  <div style="flex: 1;">
+    <h2>電卓</h2>
+    <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
+    <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+    <p>このコードは訓練校で習ったPythonの復習として作りました。</p>
+    <p>反省点はボタンのサイズや配置は固定されていて、ボタンの調整ができない点。</p>
+    <p>次作る時は画面の幅に合わせてボタンが配置されるように調整します。</p>
+  </div>
+
+  <div style="flex-shrink: 0;">
+    <img src="https://github.com/user-attachments/assets/94306916-bb75-43f2-8583-7d5fe92153e4" alt="Python電卓のスクリーンショット" style="width: 200px; height: auto; box-shadow: 0 0 5px rgba(0,0,0,0.2); margin-top: 0; margin-left: -100px;">
+  </div>
+</section>
+    <!-- 区切り線 -->
+    <div class="section-divider"></div>
 
     <!-- 作品2の紹介 -->
     <section class="project">
