--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="project" style="display: flex; align-items: flex-start; gap: 1rem;">
   <div style="flex: 1;">
     <h2>電卓</h2>
-    <p>この作品はマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
+    <p>このコードはマウスホイールを押すと電卓が開くというコードです。主な技術：Python</p>
     <p><a href="https://github.com/kobayashi-yamato20001225/dentaku/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
     <p>このコードは訓練校で習ったPythonの復習として作りました。</p>
     <p>反省点はボタンのサイズや配置は固定されていて、ボタンの調整ができない点。</p>
@@ -87,10 +87,16 @@
 
     <!-- 作品2の紹介 -->
     <section class="project">
-      <h2>たいとるうううううううう</h2>
-      <p>この作品はーーーーーー。主な技術：みていーーーー</p>
+      <h2>デュエルマスターズ管理システム</h2>
+      <p>このコードはカードの枚数や能力を管理するコードです。</p>
+      <p>3つのクラスで構成されています。主な技術:Java</p>
       <p><a href="https://example.com/project2" target="_blank">▶ 表を見る</a></p>
-      <p><a href="https://github.com/yourusername/project2" target="_blank">▶ GitHubコードを見る</a></p>
+      <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCardMain/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+	  <p><a href="https://github.com/kobayashi-yamato20001225/CardManagerGUI/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+	  <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCard/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+      <p>最近、知り合いにに進められてデュエルマスターズというカードゲームを始めたのですが、</p>
+      <p>いろんなカードを買ううちに管理が大変になってきたので作ってみました。</p>
+      <p>反省点は検索結果が一点しか表示されなかったり、削除がカード名のみでしかできず、使いにくいところです。</p>
     </section>
   </div>
 
