--- a/index.html
+++ b/index.html
@@ -79,25 +79,30 @@
   </div>
 
   <div style="flex-shrink: 0;">
-    <img src="https://github.com/user-attachments/assets/94306916-bb75-43f2-8583-7d5fe92153e4" alt="Python電卓のスクリーンショット" style="width: 200px; height: auto; box-shadow: 0 0 5px rgba(0,0,0,0.2); margin-top: 0; margin-left: -100px;">
+    <img src="https://github.com/user-attachments/assets/94306916-bb75-43f2-8583-7d5fe92153e4" alt="電卓のスクリーンショット" style="width: 200px; height: auto; box-shadow: 0 0 5px rgba(0,0,0,0.2); margin-top: 0; margin-left: -100px;">
   </div>
 </section>
     <!-- 区切り線 -->
     <div class="section-divider"></div>
 
     <!-- 作品2の紹介 -->
-    <section class="project">
-      <h2>デュエルマスターズ管理システム</h2>
-      <p>このコードはカードの枚数や能力を管理するコードです。</p>
-      <p>3つのクラスで構成されています。主な技術:Java</p>
-      <p><a href="https://example.com/project2" target="_blank">▶ 表を見る</a></p>
-      <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCardMain/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
-	  <p><a href="https://github.com/kobayashi-yamato20001225/CardManagerGUI/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
-	  <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCard/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
-      <p>最近、知り合いにに進められてデュエルマスターズというカードゲームを始めたのですが、</p>
-      <p>いろんなカードを買ううちに管理が大変になってきたので作ってみました。</p>
-      <p>反省点は検索結果が一点しか表示されなかったり、削除がカード名のみでしかできず、使いにくいところです。</p>
-    </section>
+<section class="project" style="display: flex; align-items: flex-start; gap: 1rem;">
+  <div style="flex: 1;">
+    <h2>デュエルマスターズ管理システム</h2>
+    <p>このコードはカードの枚数や能力を管理するコードです。</p>
+    <p>3つのクラスで構成されています。主な技術:Java</p>
+    <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCardMain/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+    <p><a href="https://github.com/kobayashi-yamato20001225/CardManagerGUI/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+    <p><a href="https://github.com/kobayashi-yamato20001225/DuelMastersCard/blob/main/README.md?plain=1" target="_blank">▶ GitHubコードを見る</a></p>
+    <p>最近、知り合いに進められてデュエルマスターズというカードゲームを始めたのですが、</p>
+    <p>いろんなカードを買ううちに管理が大変になってきたので作ってみました。</p>
+    <p>反省点は検索結果が一点しか表示されなかったり、削除がカード名のみでしかできず、使いにくいところです。</p>
+  </div>
+
+  <div style="flex-shrink: 0;">
+    <img src="https://github.com/user-attachments/assets/fde08164-9db9-40f6-ad7a-209c5a0890cc" alt="デュエルマスターズ管理システムのスクリーンショット" style="width: 200px; height: auto; box-shadow: 0 0 5px rgba(0,0,0,0.2); margin-top: 0;">
+  </div>
+</section>
   </div>
 
   <footer>
